--- a/build-Client-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/Makefile
+++ b/build-Client-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/Makefile
@@ -291,6 +291,7 @@ Makefile: ..\Client\Client.pro ..\..\..\Qt\5.15.2\msvc2019_64\mkspecs\win32-msvc
 		..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Core.prl \
 		..\..\..\Qt\5.15.2\msvc2019_64\lib\qtmain.prl \
 		..\..\..\Qt\5.15.2\msvc2019_64\mkspecs\features\build_pass.prf \
+		..\Client\qrc.qrc \
 		..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Widgetsd.prl \
 		..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Guid.prl \
 		..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Networkd.prl \
@@ -504,6 +505,7 @@ Makefile: ..\Client\Client.pro ..\..\..\Qt\5.15.2\msvc2019_64\mkspecs\win32-msvc
 ..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Core.prl:
 ..\..\..\Qt\5.15.2\msvc2019_64\lib\qtmain.prl:
 ..\..\..\Qt\5.15.2\msvc2019_64\mkspecs\features\build_pass.prf:
+..\Client\qrc.qrc:
 ..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Widgetsd.prl:
 ..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Guid.prl:
 ..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Networkd.prl:
