--- a/build-Client-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/Makefile.Debug
+++ b/build-Client-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/Makefile.Debug
@@ -841,12 +841,7 @@ debug\mainwindow.obj: ..\Client\mainwindow.cpp ..\Client\mainwindow.h \
 		..\..\..\Qt\5.15.2\msvc2019_64\include\QtWidgets\qpushbutton.h \
 		..\..\..\Qt\5.15.2\msvc2019_64\include\QtWidgets\qabstractbutton.h \
 		..\..\..\Qt\5.15.2\msvc2019_64\include\QtWidgets\QStatusBar \
-		..\..\..\Qt\5.15.2\msvc2019_64\include\QtWidgets\qstatusbar.h \
-		..\..\..\Qt\5.15.2\msvc2019_64\include\QtWidgets\QTextBrowser \
-		..\..\..\Qt\5.15.2\msvc2019_64\include\QtWidgets\qtextbrowser.h \
-		..\..\..\Qt\5.15.2\msvc2019_64\include\QtWidgets\qtextedit.h \
-		..\..\..\Qt\5.15.2\msvc2019_64\include\QtWidgets\qabstractscrollarea.h \
-		..\..\..\Qt\5.15.2\msvc2019_64\include\QtGui\qtextdocument.h
+		..\..\..\Qt\5.15.2\msvc2019_64\include\QtWidgets\qstatusbar.h
 
 debug\qrc_qrc.obj: debug\qrc_qrc.cpp 
 
