--- a/build-Client-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/Makefile
+++ b/build-Client-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/Makefile
@@ -288,6 +288,7 @@ Makefile: ..\Client\Client.pro ..\..\..\Qt\5.15.2\msvc2019_64\mkspecs\win32-msvc
 		..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Widgets.prl \
 		..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Gui.prl \
 		..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Network.prl \
+		..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Sql.prl \
 		..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Core.prl \
 		..\..\..\Qt\5.15.2\msvc2019_64\lib\qtmain.prl \
 		..\..\..\Qt\5.15.2\msvc2019_64\mkspecs\features\build_pass.prf \
@@ -295,6 +296,7 @@ Makefile: ..\Client\Client.pro ..\..\..\Qt\5.15.2\msvc2019_64\mkspecs\win32-msvc
 		..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Widgetsd.prl \
 		..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Guid.prl \
 		..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Networkd.prl \
+		..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Sqld.prl \
 		..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Cored.prl \
 		..\..\..\Qt\5.15.2\msvc2019_64\lib\qtmaind.prl
 	$(QMAKE) -o Makefile ..\Client\Client.pro -spec win32-msvc "CONFIG+=debug" "CONFIG+=qml_debug"
@@ -502,6 +504,7 @@ Makefile: ..\Client\Client.pro ..\..\..\Qt\5.15.2\msvc2019_64\mkspecs\win32-msvc
 ..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Widgets.prl:
 ..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Gui.prl:
 ..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Network.prl:
+..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Sql.prl:
 ..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Core.prl:
 ..\..\..\Qt\5.15.2\msvc2019_64\lib\qtmain.prl:
 ..\..\..\Qt\5.15.2\msvc2019_64\mkspecs\features\build_pass.prf:
@@ -509,6 +512,7 @@ Makefile: ..\Client\Client.pro ..\..\..\Qt\5.15.2\msvc2019_64\mkspecs\win32-msvc
 ..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Widgetsd.prl:
 ..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Guid.prl:
 ..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Networkd.prl:
+..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Sqld.prl:
 ..\..\..\Qt\5.15.2\msvc2019_64\lib\Qt5Cored.prl:
 ..\..\..\Qt\5.15.2\msvc2019_64\lib\qtmaind.prl:
 qmake: FORCE
