--- a/Server/Dockerfile
+++ b/Server/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu
+FROM ubuntu:20.04
 
 ENV TZ=Europe/Moscow
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
@@ -6,10 +6,12 @@ RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 RUN apt-get update
 RUN apt-get install qtbase5-dev qtchooser qt5-qmake qtbase5-dev-tools -y
 RUN apt-get install build-essential -y
-RUN apt-get install -y mysql-client && rm -rf /var/lib/apt
+
+RUN apt-get install -y python3-pip
+RUN pip3 install requests
+RUN pip3 install beautifulsoup4
 
 
-EXPOSE 3307
 EXPOSE 80
 EXPOSE 2323
 
@@ -20,6 +22,7 @@ COPY *.cpp /root/server/
 COPY *.h /root/server/
 COPY *.pro /root/server/
 COPY *.py /root/server/
+COPY *.db /root/server/
 
 RUN qmake Server.pro
 RUN make
